--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "tailwindcss": "^4.1.10",
         "vite": "^6.2.4"
     },
-    
     "dependencies": {
+        "@paypal/react-paypal-js": "^8.8.3",
         "bootstrap": "^5.3.7",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
